Refactor hard-coded URLs out of templates

--- a/lists/templates/home.html
+++ b/lists/templates/home.html
@@ -2,5 +2,5 @@
 
 {% block header_text %}Your To-Do list{% endblock %}
 
-{% block form_action %}/lists/new{% endblock %}
+{% block form_action %}{% url 'new_list' %}{% endblock %}
 
